--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,3 +1,5 @@
+![Magnificent Grants](../assets/magnificent-grants-image.png)
+
 # Introduction
 
 Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
