--- a/src/pages/_app.mdx
+++ b/src/pages/_app.mdx
@@ -1,5 +1,13 @@
 import '../styles/globals.css';
+import Head from 'next/head';
 
 export default function App({ Component, pageProps }) {
-    return <Component {...pageProps} />;
+    return (
+        <>
+            <Head>
+                <link rel='icon' href='/favicon.ico' />
+            </Head>
+            <Component {...pageProps} />
+        </>
+    );
 }
