--- a/src/pages/_app.mdx
+++ b/src/pages/_app.mdx
@@ -1,5 +1,6 @@
 import '../styles/globals.css';
 import Head from 'next/head';
+import Cursor from '../components/Global/Cursor';
 
 export default function App({ Component, pageProps }) {
     return (
