seeing if this fixes accidental styling ickiness

--- a/src/pages/_app.mdx
+++ b/src/pages/_app.mdx
@@ -5,6 +5,7 @@ import Cursor from '../components/Global/Cursor';
 export default function App({ Component, pageProps }) {
     return (
         <>
+            {/* <Cursor /> */}
             <Head>
                 <link rel='icon' href='/favicon.ico' />
             </Head>
