--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -2,7 +2,10 @@ import Promise from "../components/elements/Promise";
 
 # Quickstart: How to use this guide
 
-<Promise text="This page outlines the high-level contents of this guide and how we recommend you navigate it." />
+<Promise>
+  This page outlines the high-level contents of this guide and how we recommend
+  you navigate it.
+</Promise>
 
 ## What exactly is this guide?
 
