base link badge and why alignment page

--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -13,10 +13,10 @@ Most resources and knowledge about alignment are currently scattered (and it’s
 
 **This guide is a curated central hub of information and resources for alignment.** We keep every page short for you, with options to dig deeper.
 
-1. [Why alignment urgently matters](/why-alignment-urgently-matters):
+1. [Why alignment urgently matters](/why-alignment):
    - What exactly is alignment? Does it matter right now?
    - Responses to FAQs and common misconceptions
-2. [Overview of current efforts](/overview-of-current-efforts):
+2. [Overview of current efforts](/overview-current-efforts):
    - What are the current main efforts from prominent organizations?
    - A concise birds-eye view of their research directions and mission/philosophy
 3. [Research Directions](/research-directions):
