link badge done

--- a/src/pages/why-alignment.mdx
+++ b/src/pages/why-alignment.mdx
@@ -7,7 +7,7 @@ import LinkBadge from "@/components/elements/LinkBadge";
   There’s a lot of misunderstanding about what AI alignment is, why it urgently
   matters, and what we actually mean when we say “AI can end the world.”
   <b>
-    The following 5 pillars and their corresponding pages will help you
+    In the following 5 steps and their corresponding pages, we help you
     understand.
   </b>
 </Promise>
