--- a/src/pages/why-alignment.mdx
+++ b/src/pages/why-alignment.mdx
@@ -13,23 +13,15 @@ import LinkBadge from "@/components/elements/LinkBadge";
 </Promise>
 
 1. <LinkBadge
-     link="/what-is-alignment"
+     link="/understanding-alignment"
      text="What exactly is AI “alignment”?"
    /> We explain that AI alignment is about designing powerful AI systems to ensure
    they **try to do what we want them to do**.
 
-2. Aligning AI seems simple, so why is it worth discussing?
+2. Aligning AI seems simple, so why is it worth discussing? <LinkBadge link="/why-alignment-is-difficult" text="Why is alignment difficult?" />
 
-   **The Difficulty Behind Alignment:** [Why is alignment difficult?](https://www.notion.so/Why-is-alignment-difficult-385f815223004c148a1e6879afe10bcf?pvs=21)
+3. Is unaligned AI that bad? How would a chatbot, even if it was smart, take over the world? In <LinkBadge link="/superintelligence-default-dangerous" text="Superintelligence: default dangerous" />, we explain why AI's default trajectory is lethal for humans.
 
-3. Is unaligned AI that bad? How would a chatbot, even if it was smart, take over the world?
+4. Okay, but we’ll figure it out when the time comes. 1) We have lots of time: superintelligent AI is far away. 2) We’ve always figured out technical challenges in the past. <LinkBadge link="/why-this-is-urgent" text="Why is this urgent?" />
 
-   **The Risks of Unaligned AI:** [Superintelligence: default dangerous](https://www.notion.so/Superintelligence-default-dangerous-9ef0d11a444845eda56b09077b781547?pvs=21)
-
-4. Okay, but we’ll figure it out when the time comes. 1) We have lots of time: superintelligent AI is far away. 2) We’ve always figured out technical challenges in the past.
-
-   **The Urgency of Alignment:** [Why this is urgent](https://www.notion.so/Why-this-is-urgent-af137b54fa664cf0b214a0385c1c3fd1?pvs=21)
-
-5. No creature less intelligent than us has been able to align humans. But we do have one advantage: we get to build this stuff.
-
-   **Our Unique Opportunity**: [How do we actually align AI?](https://www.notion.so/How-do-we-actually-align-AI-2eddeb9538e848c8b45b2b4701ee5afc?pvs=21)
+5. No creature less intelligent than us has been able to align humans. But we do have one advantage: <b>we get to build this stuff.</b> So: <LinkBadge link="/how-we-align" text="How we actually align AI?" />
