--- a/src/pages/why-alignment.mdx
+++ b/src/pages/why-alignment.mdx
@@ -13,15 +13,15 @@ import LinkBadge from "@/components/elements/LinkBadge";
 </Promise>
 
 1. <LinkBadge
-     link="/understanding-alignment"
+     link="why-alignment/understanding-alignment"
      text="What exactly is AI “alignment”?"
    /> We explain that AI alignment is about designing powerful AI systems to ensure
    they **try to do what we want them to do**.
 
-2. Aligning AI seems simple, so why is it worth discussing? <LinkBadge link="/why-alignment-is-difficult" text="Why is alignment difficult?" />
+2. Aligning AI seems simple, so why is it worth discussing? <LinkBadge link="why-alignment/why-alignment-is-difficult" text="Why is alignment difficult?" />
 
-3. Is unaligned AI that bad? How would a chatbot, even if it was smart, take over the world? In <LinkBadge link="/superintelligence-default-dangerous" text="Superintelligence: default dangerous" />, we explain why AI's default trajectory is lethal for humans.
+3. Is unaligned AI that bad? How would a chatbot, even if it was smart, take over the world? In <LinkBadge link="why-alignment/default-dangerous" text="Unaligned AI: default dangerous" />, we explain why AI's default trajectory is lethal for humans.
 
-4. Okay, but we’ll figure it out when the time comes. 1) We have lots of time: superintelligent AI is far away. 2) We’ve always figured out technical challenges in the past. <LinkBadge link="/why-this-is-urgent" text="Why is this urgent?" />
+4. Okay, but we’ll figure it out when the time comes. 1) We have lots of time: superintelligent AI is far away. 2) We’ve always figured out technical challenges in the past. <LinkBadge link="why-alignment/why-this-is-urgent" text="Why is this urgent?" />
 
-5. No creature less intelligent than us has been able to align humans. But we do have one advantage: <b>we get to build this stuff.</b> So: <LinkBadge link="/how-we-align" text="How we actually align AI?" />
+5. No creature less intelligent than us has been able to align humans. But we do have one advantage: <b>we get to build this stuff.</b> So: <LinkBadge link="why-alignment/our-opportunity" text="How we actually align AI?" />
