add underlines and highlight

--- a/src/pages/why-alignment/understanding-alignment.mdx
+++ b/src/pages/why-alignment/understanding-alignment.mdx
@@ -11,17 +11,24 @@ What is AI “alignment,” and how does it differ from “safety” and “cont
 
 ## Definitions
 
-AI safety is the umbrella term for _all_ things “reducing risks posed by AI” (misuse, reliability, privacy, etc.). It may be helpful to visualize AI safety in four quadrants:
+<u>AI safety</u> is the term for _all_ things “reducing risks posed by AI” (misuse,
+reliability, privacy, etc.). It may be helpful to visualize AI safety in four quadrants:
 
 <div class="mt-4">
   <RiskTable />
 </div>
 
-This guide is about the upper righthand square, where things go wrong by accident (and by default). When we think about preventing this long-term accident risk, we think about solving the AI control problem.
+This guide is about the upper righthand square, where things go wrong by accident (and by default). When we think about preventing this long-term accident risk, we think about solving the <u>AI control</u> problem.
 
-AI control is about ensuring that AI systems try to do the right thing, and if they don’t, that they don’t competently pursue the wrong thing.
+<u>AI control</u> is about ensuring that AI systems try to do the right thing, and
+if they don’t, that they don’t competently pursue the wrong thing.
 
-AI alignment is an approach to the AI control problem. More specifically, the **alignment** problem \***\*is about **building AI systems that are trying to do what their operator wants them to do\*\*. In other words, AI alignment aims to solve the control problem by making sure the AI does the right thing to begin with, without considering approaches like containing, manipulating, or outsmarting the AI.
+<u>AI alignment</u> is an approach to the <u>AI control</u> problem. More specifically,
+the **alignment** problem \***\*is about **building AI systems that are trying to
+do what their operator wants them to do\*\*. In other words, AI alignment aims to
+solve the control problem by making sure the AI does the right thing to begin with,
+without considering approaches like containing, manipulating, or outsmarting the
+AI.
 
 ## Alignment = _motives_ of AI, not their knowledge or ability
 
