highlight done properly

--- a/src/pages/why-alignment/understanding-alignment.mdx
+++ b/src/pages/why-alignment/understanding-alignment.mdx
@@ -1,5 +1,6 @@
 import Promise from "@/components/elements/Promise";
 import RiskTable from "@/components/elements/RiskTable";
+import StyledText from "@/components/elements/StyledText";
 
 # Understanding AI Alignment
 
@@ -23,12 +24,14 @@ This guide is about the upper righthand square, where things go wrong by acciden
 <u>AI control</u> is about ensuring that AI systems try to do the right thing, and
 if they don’t, that they don’t competently pursue the wrong thing.
 
-<u>AI alignment</u> is an approach to the <u>AI control</u> problem. More specifically,
-the **alignment** problem \***\*is about **building AI systems that are trying to
-do what their operator wants them to do\*\*. In other words, AI alignment aims to
-solve the control problem by making sure the AI does the right thing to begin with,
-without considering approaches like containing, manipulating, or outsmarting the
-AI.
+<div>
+  <u>AI alignment</u> is an approach to the <u>AI control</u> problem. More specifically,
+  the **alignment** problem is about <StyledText highlight>building AI systems that are trying to
+    do what their operator wants them to do</StyledText>. In other words, AI alignment aims to
+  solve the control problem by making sure the AI does the right thing to begin with,
+  without considering approaches like containing, manipulating, or outsmarting the
+  AI.
+</div>
 
 ## Alignment = _motives_ of AI, not their knowledge or ability
 
