--- a/src/pages/why-alignment.mdx
+++ b/src/pages/why-alignment.mdx
@@ -6,10 +6,9 @@ import LinkBadge from "@/components/elements/LinkBadge";
 <Promise>
   There’s a lot of misunderstanding about what AI alignment is, why it urgently
   matters, and what we actually mean when we say “AI can end the world.”
-  <b>
-    In the following 5 steps and their corresponding pages, we help you
-    understand.
-  </b>
+  
+  **In the following 5 steps and their corresponding pages, we help you
+  understand.**
 </Promise>
 
 1. <LinkBadge
