added custom alert component

--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -1,4 +1,5 @@
-import Promise from "../components/elements/Promise";
+import Promise from "@/components/elements/Promise";
+import CustomAlert from "@/components/elements/CustomAlert";
 
 # Quickstart: How to use this guide
 
@@ -27,3 +28,7 @@ Most resources and knowledge about alignment are currently scattered (and it’s
 4. [Next steps](/next-steps)
    - How can you contribute?
    - Concrete directions to take action, including a list of open problems to work on
+
+## How should you navigate this guide?
+
+<CustomAlert title="This section is incomplete" variant="warning" description="As we fill out the rest of the guide, we'll be updating this section with which pages you should start with and visit next (based on what you're looking for)." />
