why is alignment difficult text

--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -29,6 +29,8 @@ Most resources and knowledge about alignment are currently scattered (and it’s
    - How can you contribute?
    - Concrete directions to take action, including a list of open problems to work on
 
+<CustomAlert variant="primary" className="mt-4" title="This guide is still under development" description={<div>We're working to upload the rest of the writing and resources onto this guide <b>within the next week.</b> Stay tuned!</div>} />
+
 ## How should you navigate this guide?
 
-<CustomAlert title="This section is incomplete" variant="warning" description="As we fill out the rest of the guide, we'll be updating this section with which pages you should start with and visit next (based on what you're looking for)." />
+<CustomAlert variant="warning" title="This section is incomplete" variant="warning" description="As we fill out the rest of the guide, we'll be updating this section with which pages you should start with and visit next (based on what you're looking for)." />
