--- a/src/pages/why-alignment/understanding-alignment.mdx
+++ b/src/pages/why-alignment/understanding-alignment.mdx
@@ -1,6 +1,5 @@
 import Promise from "@/components/elements/Promise";
 import RiskTable from "@/components/elements/RiskTable";
-import StyledText from "@/components/elements/StyledText";
 import Toggle from "@/components/elements/Toggle";
 
 # Understanding AI Alignment
@@ -28,8 +27,8 @@ if they don’t, that they don’t competently pursue the wrong thing.
 
 <div>
   <u>AI alignment</u> is an approach to the <u>AI control</u> problem. More specifically,
-  the **alignment** problem is about <StyledText highlight>building AI systems that are trying to
-    do what their operator wants them to do</StyledText>. In other words, AI alignment aims to
+  the **alignment** problem is about <span className="bg-highlight">building AI systems that are trying to
+    do what their operator wants them to do</span>. In other words, AI alignment aims to
   solve the control problem by making sure the AI does the right thing to begin with,
   without considering approaches like containing, manipulating, or outsmarting the
   AI.
