--- a/src/pages/why-alignment/why-alignment-is-difficult.mdx
+++ b/src/pages/why-alignment/why-alignment-is-difficult.mdx
@@ -31,7 +31,7 @@ _Wait, why is that difficult?_
 
 1. You want your AI to get you a cup of tea. You specify this as its goal.
 2. But there’s a vase in the way, and the robot plows through it. This is because it only cares about one variable: the cup of tea.
-3. So you turn it off, modify it, and it cares about the vase. **But there is always another thing.**
+3. So you turn it off, modify it, and it cares about the vase. <b class="bg-highlight">But there is always another thing.</b>
 4. Now, it values the vase and realizes a human is in the environment that may move around and knock over it. So it determines that it’s best to kill the human then.
 
 ---
@@ -40,7 +40,7 @@ _Wait, why is that difficult?_
     
     If you have a sufficiently powerful agent and manage to come up with a really good objective that cares about the top 20 things humans value, **the 21st thing that humans value will be gone forever**.
     
-    More specifically, an agent that only cares about a subset of the variables in a system will be willing to trade off arbitrarily large amounts of any variables that *aren’t* part of its goal for arbitrarily tiny increases in any of the things that *are* in its goal.
+    More specifically, an agent that only cares about a subset of the variables in a system will be willing to trade off <span class="text-highlight-dark">arbitrarily large amounts</span> of any variables that *aren’t* part of its goal for arbitrarily tiny increases in any of the things that *are* in its goal.
     
     >“A system that is optimizing a function of *n* variables, where the objective depends on subset of size *k\<n*, will often set the remaining unconstrained variables to extreme values. If one of those unconstrained variables is something we care about, the solution found may be *highly undesirable*.” - Stuart Russell
     >
