--- a/src/pages/why-alignment/why-alignment-is-difficult.mdx
+++ b/src/pages/why-alignment/why-alignment-is-difficult.mdx
@@ -27,7 +27,7 @@ _Wait, why is that difficult?_
     3. We have problems specifying simple goals in even simple games, and this is the default. It only gets more difficult as we begin thinking about the real world.
 </Toggle>
 
-### Getting an AI to make you a cup of tea
+## Getting an AI to make you a cup of tea
 
 1. You want your AI to get you a cup of tea. You specify this as its goal.
 2. But there’s a vase in the way, and the robot plows through it. This is because it only cares about one variable: the cup of tea.
@@ -40,25 +40,26 @@ _Wait, why is that difficult?_
     
     If you have a sufficiently powerful agent and manage to come up with a really good objective that cares about the top 20 things humans value, **the 21st thing that humans value will be gone forever**.
     
-    More specifically, an agent that only cares about a subset of the variables in a system will be willing to trade off <span class="text-highlight-dark">arbitrarily large amounts</span> of any variables that *aren’t* part of its goal for arbitrarily tiny increases in any of the things that *are* in its goal.
+    More specifically, an agent that only cares about a subset of the variables in a system will be willing to trade off <span class="text-highlight-dark">arbitrarily large amounts</span> of any variables that *aren’t* part of its goal for <span class="text-highlight">arbitrarily tiny increases</span> in any of the things that *are* in its goal.
     
     >“A system that is optimizing a function of *n* variables, where the objective depends on subset of size *k\<n*, will often set the remaining unconstrained variables to extreme values. If one of those unconstrained variables is something we care about, the solution found may be *highly undesirable*.” - Stuart Russell
     >
 </Toggle>
 
-<Toggle title={<div>But that scenario is unrealistic in many ways. One important way is that you wouldn’t be able to “turn it off.”</div>}>
+<Toggle title={<div>But that scenario is unrealistic in many ways. One important way is that you wouldn’t be able to <b className="bg-highlight">“turn it off.”</b></div>}>
     - Turning it off will prevent it from achieving its objective.
     - It will fight you and, even worse, deceive you (e.g., behave until it’s in a position where you can’t turn it off, and then go after its actual objective of the tea).
 </Toggle>
 
 This is a **convergent instrumental goal** (it doesn’t matter what the end goal is), as are self-preservation, goal preservation, resource acquisition, and self-improvement. Thus, **Artificial General Intelligence is dangerous by default.** (More in [Superintelligence: default dangerous](https://www.notion.so/Superintelligence-default-dangerous-9ef0d11a444845eda56b09077b781547?pvs=21).)
 
-### We aren’t on track to build this safely: AI today is misaligned.
+## We aren’t on track to build this safely: AI today is misaligned.
 
 Models like GPT-4 can’t take over the world but are still **misaligned** (they will often do things their designers didn’t want, such as lie or be offensive.)
 
 <Toggle title={<div>This is concerning because we are tasked with aligning something far more intelligent than us when we cannot properly align far weaker AI.</div>}>
 
+### Elon Musk vs. babies
 Here’s a way to think about this problem: say you gave the goal of “acquire/create as many paperclips as possible” to a baby. The baby may knock over some items on your table to gather a few paper clips, which isn’t horrible.
 
 Now, imagine you gave that same goal to Elon Musk. If that became his sole purpose, he could cause significant damage to the world in his pursuit.
