--- a/src/pages/overview-current-efforts.mdx
+++ b/src/pages/overview-current-efforts.mdx
@@ -81,5 +81,29 @@ at these companies and know where to go to read more.**
       </AccordionContent>
     </AccordionItem>
 
+  <AccordionItem value="item-4">
+    <AccordionTrigger>
+        **Academia**
+    </AccordionTrigger>
+    <AccordionContent>
+        Here is a non-comprehensive list of alignment work being done in academia:
+        - Interpretability
+            - In **["Emergent World Representations: Exploring a Sequence Model Trained on a Synthetic Task"](https://arxiv.org/pdf/2210.13382)**, a group of researchers at Harvard, MIT, and Northeastern to extend partial game transcripts of Othello with legal moves. They show that although the model has no knowledge of the game’s rules, it forms an internal representation of the board state, which it then uses to generate legal moves.
+            - **["Finding Neurons in a Haystack: Case Studies with Sparse Probing"](https://arxiv.org/pdf/2305.01610)** introduces *sparse probing* to understand better how human-interpretable features are represented in activations of LLMs. The paper uses k-sparse probes (linear classifiers with at most k non-zero coefficients) to identify specific neurons or sparse sets of neurons responsible for encoding particular features.
+        - Surveys
+            - A nice survey of many different areas of alignment research is given in **["AI Alignment: A Comprehensive Survey"](https://alignmentsurvey.com/uploads/AI-Alignment-A-Comprehensive-Survey.pdf)**. There, they decompose the alignment problem into two components: aligning AI systems via appropriate training, understanding if systems are aligned, and then governing them.
+    </AccordionContent>
+    </AccordionItem>
+
+    <AccordionItem value="item-5">
+      <AccordionTrigger>
+        **Other Organizations**
+      </AccordionTrigger>
+      <AccordionContent>
+        - **[Center for AI Safety (CAIS)](https://www.safe.ai/work)**: CAIS researches ways to reduce societal-scale risks caused by AI and provides guidance to policymakers on effective strategies for governing AI deployment and ensuring its safe integration into society.
+        - **[Machine Intelligence Research Institute (MIRI)](https://intelligence.org/)**: Focused on doing research to make sure superintelligent models have a positive impact on humanity. They’ve done work on Corrigibility, i.e., AI systems that assist and do not resist corrective interventions (note that by default, AI systems are not corrigible (see **[Why is alignment difficult](https://www.notion.so/Why-is-alignment-difficult-385f815223004c148a1e6879afe10bcf?pvs=21)**).
+        - **[US AI Safety Institute](https://www.nist.gov/aisi)**: Led by Paul Christiano, the institute works on advancing research and measurement science for AI safety, conducting safety evaluations of models and systems, and developing guidelines for evaluations and risk mitigations, including content authentication and the detection of synthetic content.
+      </AccordionContent>
+    </AccordionItem>
   </Accordion>
 </div>
