--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -20,12 +20,12 @@ Most resources and knowledge about alignment are currently scattered (and it’s
 2. [Overview of current efforts](/overview-current-efforts):
    - What are the current main efforts from prominent organizations?
    - A concise birds-eye view of their research directions and mission/philosophy
-3. [Research Directions](/research-directions):
+3. <i className="text-gray-700/70">(coming soon)</i> Research Directions:
    - For the current main efforts, we expand on:
      - Up-to-date summary of recent work
      - Top resources to learn more
      - Next step opportunities (”todos”)
-4. [Next steps](/next-steps)
+4. <i className="text-gray-700/70">(coming soon)</i> Next steps:
    - How can you contribute?
    - Concrete directions to take action, including a list of open problems to work on
 
