last message done

--- a/src/pages/why-alignment/our-opportunity.mdx
+++ b/src/pages/why-alignment/our-opportunity.mdx
@@ -12,5 +12,5 @@ How do we, humans, actually go about aligning an intelligence far superior to ou
 
 >“We do have one advantage: we get to build the stuff. **In principle**, we could build a kind of superintelligence that would protect human values. We would certainly have strong reason to do so. **In practice**, the control problem—the problem of how to control what the superintelligence would do—looks quite difficult. **It also looks like we will only get one chance.** Once unfriendly superintelligence exists, it would prevent us from replacing it or changing its preferences. Our fate would be sealed.” - Nick Bostrom
 
-<CustomAlert className="mb-0 mt-4" variant="warning" title="This section is incomplete" variant="warning" description="As we fill out the rest of the guide, we'll be updating this section with which pages you should start with and visit next (based on what you're looking for)." />
+<CustomAlert className="mb-0 mt-4" variant="warning" title="This section is incomplete" variant="warning" description="We're still working on this section and will have it complete within the next week. Stay tuned!" />
 
